--- a/source/dita/unstructured-framemaker-to-dita.dita
+++ b/source/dita/unstructured-framemaker-to-dita.dita
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE concept PUBLIC "-//OASIS//DTD DITA Concept//EN" "concept.dtd">
-<concept id="concept_ijn_kpf_l3c">
+<concept id="concept_ijk_kpf_l3c">
     <title>Unstructured FrameMaker → DITA XML Pilot</title>
     <conbody>
         <section id="section_g42_mpf_l3c">
